cip-macros/tests/ui/cip_instance_wrong_type_instance_id.stderr
error: The field 'id' must be of type 'u16'
  --> tests/ui/cip_instance_wrong_type_instance_id.rs:17:9
   |
17 |     id: u32,
   |         ^^^

error[E0252]: the name `ClassCode` is defined multiple times
 --> tests/ui/cip_instance_wrong_type_instance_id.rs:7:5
  |
2 | use crate::cip::ClassCode;
  |     --------------------- previous import of the type `ClassCode` here
...
7 |     ClassCode,
  |     ^^^^^^^^^-
  |     |
  |     `ClassCode` reimported here
  |     help: remove unnecessary import
  |
  = note: `ClassCode` must be defined only once in the type namespace of this module

error[E0308]: mismatched types
  --> tests/ui/cip_instance_wrong_type_instance_id.rs:15:10
   |
15 | #[derive(CipInstance)]
   |          ^^^^^^^^^^^
   |          |
   |          expected `u16`, found `u32`
   |          expected `u16` because of return type
   |
   = note: this error originates in the derive macro `CipInstance` (in Nightly builds, run with -Z macro-backtrace for more info)
